CONFIG DO SITE 27/12/20

--- a/paginas/cursos/Csharp/curso-Csharp.html
+++ b/paginas/cursos/Csharp/curso-Csharp.html
@@ -10,10 +10,10 @@
 
 	<body>
 		<div id="container">
-      <h1>Página :: Csharp ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+
+      <div class="menu-box">
+
+        <ul class="menu-horiz">
 					<li><a href="../java/curso-java.html">Java</a></li>
           <li><a href="../../../pagina-inicial.html">Inicio</a></li>
           <li><a href="../Python/curso-Python.html">Python</a></li>
@@ -21,10 +21,15 @@
         </ul>
       </div>
 
-          <figure>
-						<img id="imgjava" src="../../../img/java.jpg" alt="historia do java">
-					   <figcaption>historia do Java</figcaption>
+
+				<h1 class="tit-pag">Página :: Csharp ::</h1>
+
+				<figure id="csharp">
+						<img id="img-csharp" src="../../../img/csharp.jpg" alt="historia do c#">
+					   <figcaption>historia do c#</figcaption>
 					 </figure>
+
+
 
 		</div>
 	</body>
