--- a/paginas/cursos/Python/curso-Python.html
+++ b/paginas/cursos/Python/curso-Python.html
@@ -10,16 +10,24 @@
 
 	<body>
 		<div id="container">
-      <h1>Página :: Python ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+
+      <div class="menu-box">
+
+        <ul class="menu-horiz">
 					<li><a href="../Java/curso-java.html">Java</a></li>
 					<li><a href="../Csharp/curso-Csharp.html">C#</a></li>
 					<li><a href="../../../pagina-inicial.html">Inicio</a></li>
 					<li><a href="../Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+        <h1 class="tit-pag">Página :: Python ::</h1>
+
+			<figure id="python">
+				<img id="img-python" src="../../../img/Python.jpg" alt="historia do python">
+				 <figcaption>historia do python</figcaption>
+			 </figure>
+
 
 
 
