--- a/paginas/cursos/Ruby/curso-Ruby.html
+++ b/paginas/cursos/Ruby/curso-Ruby.html
@@ -10,16 +10,25 @@
 
 	<body>
 		<div id="container">
-      <h1>Página :: Ruby ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+
+      <div class="menu-box">
+
+
+				<ul class="menu-horiz">
 					<li><a href="../java/curso-java.html">Java</a></li>
           <li><a href="../Csharp/curso-Csharp.html">C#</a></li>
           <li><a href="../Python/curso-Python.html">Python</a></li>
           <li><a href="../../../pagina-inicial.html">Inicio</a></li>
         </ul>
       </div>
+
+         <h1 class="tit-pag">Página :: Ruby ::</h1>
+
+			<figure id="ruby">
+				<img id="img-ruby" src="../../../img/ruby.jpg" alt="historia do ruby">
+				 <figcaption>historia do ruby</figcaption>
+			 </figure>
+
 
 
 
