--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -10,19 +10,22 @@
 
 	<body>
 		<div id="container">
-      <h1>Página :: INICIAL ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+
+
+		  <div class="menu-box">
+
+
+			  <ul class="menu-horiz">
           <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
           <li><a href="paginas/cursos/Csharp/curso-Csharp.html">C#</a></li>
           <li><a href="paginas/cursos/Python/curso-Python.html">Python</a></li>
           <li><a href="paginas/cursos/Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
+
+
       </div>
+			<h1 class="tit-pag">Página :: INICIAL ::</h1>
 
-
-
-		</div>
+</div>
 	</body>
 </html>
