--- a/paginas/cursos/Java/curso-Java.html
+++ b/paginas/cursos/Java/curso-Java.html
@@ -10,16 +10,25 @@
 
 	<body>
 		<div id="container">
-      <h1>Página :: Java ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+
+      <div class="menu-box">
+
+        <ul class="menu-horiz">
 					<li><a href="../../../pagina-inicial.html">Inicio</a></li>
           <li><a href="../Csharp/curso-Csharp.html">C#</a></li>
           <li><a href="../Python/curso-Python.html">Python</a></li>
           <li><a href="../Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+
+              <h1 class="tit-pag">Página :: Java ::</h1>
+
+    	<figure id="Java">
+				<img id="img-java" src="../../../img/java.jpg" alt="historia do java">
+				 <figcaption>historia do Java</figcaption>
+			 </figure>
+
 
 
 
