--- a/paginas/PaginaInicial.html
+++ b/paginas/PaginaInicial.html
@@ -9,16 +9,24 @@
 
   <body>
     <div id="Container">
-      <h1>Página :: INICIAL ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul class="LinksPaginas">
+<!--
+Para menus na horizontal tem que fazer
+subir o menu para  o topo da linha,
+No css
+-->
+      <div class="MenuBox">
+
+        <ul class="MenuHorzontal">
           <li><a href="cursos/Java/curso-Java.html">Java</a></li>
           <li><a href="cursos/Csharp/curso-Csharp.html">C#</a></li>
           <li><a href="cursos/Python/curso-Python.html">Python</a></li>
           <li><a href="cursos/Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
+
       </div>
+
+      <h1 class="Titulo">Página :: INICIAL ::</h1>
+
     </div>
   </body>
 </html>
