--- a/paginas/cursos/Csharp/curso-Csharp.html
+++ b/paginas/cursos/Csharp/curso-Csharp.html
@@ -21,7 +21,7 @@
             <li><a href="../../cursos/Ruby/curso-Ruby.html">Ruby</a></li>
 
           </ul>
-          <figure>
+          <figure class="HistoriaCSharp">
             <img src="../../../Imagens/c-sharp.png" alt="Icone da linguagem de Programaçoa CSharp">
             <figcaption>Historia do C#</figcaption>
           </figure>
