--- a/paginas/cursos/Python/curso-Python.html
+++ b/paginas/cursos/Python/curso-Python.html
@@ -8,24 +8,21 @@
   </head>
   <body>
     <div id="Container">
-
-        <h1>Página :: Python ::</h1>
-        <div >
-
-          <h2>Lista de Cursos</h2>
-          <ul>
-
+        <div  class="MenuBox">
+          <ul class="MenuHorzontal">
             <li><a href="../../../paginas/PaginaInicial.html">Inicio</a></li>
             <li><a href="../../cursos/Csharp/curso-Csharp.html">C#</a></li>
             <li><a href="../../cursos/Java/curso-Java.html">Java</a></li>
             <li><a href="../../cursos/Ruby/curso-Ruby.html">Ruby</a></li>
-            <div class="Imagempython">
-              <img src="../../../Imagens/Python.png" alt="Ícones feitos por https://www.flaticon.com/br/autores/pixelmeetup">
-            </div>
-
-
           </ul>
         </div>
+        <h1 class="Titulo">Página :: Python ::</h1>
+
+        <figure>
+          <img src="../../../Imagens/Python.png" alt="Imagem da HistoriaPython">
+          <figcaption>HistoriaPython</figcaption>
+        </figure>
+
 
     </div>
   </body>
