--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>:: JAVA ::</title>
-    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
-  </head>
-  <body>
-    <div id="container">
-      <div class="menu-box">
-        <ul class="menu-horiz">
-          <li><a href="../csharp/curso-csharp.html">C#</a></li>
-          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
-          <li><a href="../python/curso-python.html">Python</a></li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>:: java ::</title>
+	</head>
+
+	<body>
+		<div id="container">
+      <h1>Página :: Java ::</h1>
+      <div>
+        <h2>Lista de Cursos</h2>
+        <ul>
+					<li><a href="../../../pagina-inicial.html">Inicio</a></li>
+          <li><a href="../Csharp/curso-Csharp.html">C#</a></li>
+          <li><a href="../Python/curso-Python.html">Python</a></li>
+          <li><a href="../Ruby/curso-Ruby.html">Ruby</a></li>
         </ul>
       </div>
 
-      <h1 class="tit-pag">Página :: JAVA  ::</h1>
 
-      <figure class="img-box">
-        <img id="img-java" src="../../../img/img_01-logo-java.jpg" alt="Logo da linguagem de programação JAVA">
-        <figcaption>HISTÓRIA DO JAVA</figcaption>
-      </figure>
 
-    </div>
-  </body>
+		</div>
+	</body>
 </html>
