--- a/paginas/cursos/Csharp/curso-Csharp.html
+++ b/paginas/cursos/Csharp/curso-Csharp.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>:: C# ::</title>
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
+  </head>
+  <body>
+    <div id="container">
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>:: Csharp ::</title>
-	</head>
-
-	<body>
-		<div id="container">
-      <h1>Página :: Csharp ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-					<li><a href="../java/curso-java.html">Java</a></li>
-          <li><a href="../../../pagina-inicial.html">Inicio</a></li>
-          <li><a href="../Python/curso-Python.html">Python</a></li>
-          <li><a href="../Ruby/curso-Ruby.html">Ruby</a></li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
 
+      <h1 class="tit-pag">Página :: C# ::</h1>
 
+      <figure class="img-box">
+        <img id="img-csharp" src="../../../img/img_02-logo-csharp.jpg" alt="Logo da linguagem de programação CSHARP">
+        <figcaption>HISTÓRIA DO C#</figcaption>
+      </figure>
 
-		</div>
-	</body>
+    </div>
+  </body>
 </html>
