--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>:: RUBY ::</title>
-    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
-  </head>
-  <body>
-    <div id="container">
-      <div class="menu-box">
-        <ul class="menu-horiz">
-          <li><a href="../csharp/curso-csharp.html">C#</a></li>
-          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
-          <li><a href="../java/curso-java.html">Java</a></li>
-          <li><a href="../python/curso-python.html">Python</a></li>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>:: Ruby ::</title>
+	</head>
+
+	<body>
+		<div id="container">
+      <h1>Página :: Ruby ::</h1>
+      <div>
+        <h2>Lista de Cursos</h2>
+        <ul>
+					<li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../Csharp/curso-Csharp.html">C#</a></li>
+          <li><a href="../Python/curso-Python.html">Python</a></li>
+          <li><a href="../../../pagina-inicial.html">Inicio</a></li>
         </ul>
       </div>
 
-      <h1 class="tit-pag">Página :: RUBY ::</h1>
 
-      <figure class="img-box">
-        <img id="img-ruby" src="../../../img/img_04-logo-ruby.jpg" alt="Logo da linguagem de programação Ruby">
-        <figcaption>HISTÓRIA DO RUBY</figcaption>
-      </figure>
-    </div>
-  </body>
+
+		</div>
+	</body>
 </html>
