--- a/paginas/cursos/c-sharp/curso-csharp.html
+++ b/paginas/cursos/c-sharp/curso-csharp.html
@@ -10,9 +10,9 @@
     <div id ="container">
 
       <h2>Lista de Cursos:</h2>
-          <ul class="menu-horiz">
-            <li><a href="../java/curso-java.html">Java</a></li>
+          <ul class="menu-horiza">
             <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
+            <li><a href="../java/curso-java.html">Java</a></li>
             <li><a href="../python/curso-python.html">Python</a></li>
             <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
           </ul>
