--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -9,7 +9,7 @@
   <body>
     <div id ="container">
       <h2>Lista de Cursos:</h2>
-      <ul class="menu-horiz">
+      <ul class="menu-horiza">
         <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
         <li><a href="../c-sharp/curso-csharp.html">C#</a></li>
         <li><a href="../python/curso-python.html">Python</a></li>
